History
=======

Version 0.7.6 - Unreleased
--------------------------

Version 0.7.5 - 2008-10-27
--------------------------

- Move file locking from queue dispatch to the ``tick_and_dispatch``
  browser view.  This is to make sure that we don't put duplicates
  into the queue.  This is because the underlying queue implementation
  will actually work against us here by allowing simultaneous adds in
  one ZODB- write. [nouri]

- Fix #289779: Strip whitespace from e-mail addresses. [nouri]

- Added ``encoding`` attribute on the ``HTMLComposer`` class to make
  it possible to either subclass and provide a different default
  encoding, or set a persistent attribute. [malthe]

- Fix #280338: Images in header and footer text were sent with
  relative URLs. [nouri]

- It's now possible to filter channels from the sendnewsletter view.
  Simple by setting channel.sendable=False.
  [tmog]

- Fixed an issue with installing collective.dancing from python.
  The event-listener registering ISalt on creation of a new tool
  no longer depends upon having a request. [tmog]
  
- zope.conf configuration with Virtual Host added in 
  documentation [macadames]  

Version 0.7.4 - 2008-09-19
--------------------------

- Fix an issue where confirming pending subscriptions by visiting the "My 
  subscriptions" page.  If a subscription is already confirmed the dictionary
  ``subscription.metadata`` does not have a key ``pending``.  [saily]

Version 0.7.3 - 2008-09-16
--------------------------

- Rebuild ``collective.dancing.pot`` and updated German
  translation. [saily]

- Removed bug in ``ManageSubscriptionsForm.remove``. When the search box
  was added we also changed the ``ManageSubscriptionsForm.get_items`` method
  to return the secret instead of the name. The remove method was not updated, 
  and delete of subscriptions did not work. [saily]

- Removed bug in CSV-export. Export must have same ordered fields or
  columns as expected on import. As we are using the composer schema